# cmake-tutorial

./: README.md  readme.md
lesson-00/: add-cmake-to-path.ps1  lesson-00-readme.md  readme.md
lesson-01/: CMakeLists.txt  lesson-01-readme.md  readme.md  run-built-program.ps1  run-cmake-build.ps1  run-cmake.ps1  tutorial.cpp
lesson-02/: CMakeLists.txt  readme.md
lesson-02/sources/: main.cpp  main.h
lesson-02/sources/game/input/: input.cpp  input.h
lesson-02/sources/game/render/: render.cpp  render.h
lesson-02/sources/gui/: gui.cpp  gui.h
lesson-03/: CMakeLists.txt  delete-generated.ps1  readme.md
lesson-03/sources/: main.cpp
